--- a/src/app/pages/forget-password/forget-password.component.html
+++ b/src/app/pages/forget-password/forget-password.component.html
@@ -1,4 +1,4 @@
-<section class="w-2/3 mx-auto">
+<section class="w-full md:w-2/3 mx-auto">
   <h2 class="text-center text-green-600 text-3xl mb-5 font-semibold">Forget Password</h2>
   @if (step === 1) {
     <form class="max-w-xl mx-auto p-5 border border-green-600 rounded-lg" [formGroup]="verifyEmailForm" (ngSubmit)="submitVerifyEmail()" >
