--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<section class="w-2/3 mx-auto">
+<section class="w-full md:w-2/3 mx-auto">
   <h2 class="text-center text-green-600 text-3xl mb-5 font-semibold">Register</h2>
   <form class="max-w-xl mx-auto p-5 border border-green-600 rounded-lg" [formGroup]="registerForm" (ngSubmit)="register()" >
     <div class="relative z-0 w-full mb-5 group">
