--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="py-8 bg-gray-200">
-  <div class="container max-w-screen-xl mx-auto">
+  <div class="container max-w-screen-xl mx-auto px-4">
     <div class="capitalize mb-5">
       <div>
         <h3 class="text-3xl text-green-600 mb-2 font-semibold">get the freshCart app</h3>
@@ -10,18 +10,18 @@
         <button class="p-2 bg-green-600 text-white rounded-lg">share app link</button>
       </div>
     </div>
-    <div class="capitalize flex justify-between">
-      <div class="flex items-center gap-10">
-        <h3 class="text-3xl text-green-600 mb-2 font-semibold">payments partners</h3>
-        <div class="flex space-x-4">
+    <div class="capitalize flex flex-col md:flex-row gap-2 md:gap-0 justify-between">
+      <div class="flex flex-col md:flex-row gap-2 md:gap-10 items-center">
+        <h3 class="text-[25px] md:text-3xl text-green-600 mb-2 font-semibold">payments partners</h3>
+        <div class="flex  space-x-4">
           <img src="/images/amazon-pay.png" class="size-10" alt="image-payment" />
           <img src="/images/mastercard.webp" class="size-10" alt="image-payment" />
           <img src="/images/American-Express-Color.png" class="size-10" alt="image-payment" />
           <img src="/images/paypal.png" class="size-10" alt="image-payment" />
         </div>
       </div>
-      <div class="flex items-center gap-10">
-        <h3 class="text-3xl text-green-600 mb-2 font-semibold">get delivers with freshCart</h3>
+      <div class="flex flex-col md:flex-row gap-2 md:gap-10 items-center">
+        <h3 class="text-[25px] md:text-3xl text-green-600 mb-2 font-semibold">get delivers with freshCart</h3>
         <div class="flex space-x-4">
           <img src="/images/get-google-play.png" class="size-20" alt="google-play" />
           <img src="/images/get-apple-store.png" class="size-[75px]" alt="apple-store" />
