--- a/src/app/layouts/main-auth/main-auth.component.html
+++ b/src/app/layouts/main-auth/main-auth.component.html
@@ -1,5 +1,5 @@
 <app-navbar [isLogin]="false" ></app-navbar>
-<div class="container max-w-screen-xl mx-auto my-10 py-10">
+<div class="container max-w-screen-xl mx-auto my-10 py-10 px-4">
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
