--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="bg-gray-100 fixed top-0 left-0 w-full z-[9999] dark:bg-gray-900">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto py-4">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a routerLink="/home" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img src="/images/freshcart-logo.svg" class="w-full h-10" alt="Logo" />
     </a>
@@ -13,16 +13,16 @@
       @if (isLogin) {
         <ul class="font-medium flex flex-col md:p-0 mt-4 border rounded-lg md:flex-row md:space-x-2 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
           <li>
-            <a routerLink="/home" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg" aria-current="page">Home</a>
+            <a routerLink="/home" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg" aria-current="page"> {{'navbar.home' | translate}} </a>
           </li>
           <li>
-            <a routerLink="/products" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg">Products</a>
+            <a routerLink="/products" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg"> {{'navbar.products' | translate}} </a>
           </li>
           <li>
-            <a routerLink="/categories" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg">Categories</a>
+            <a routerLink="/categories" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg"> {{'navbar.categories' | translate}} </a>
           </li>
           <li>
-            <a routerLink="/brands" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg">Brands</a>
+            <a routerLink="/brands" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg"> {{'navbar.brands' | translate}} </a>
           </li>
         </ul>
       }
@@ -61,9 +61,13 @@
             </a>
           </li>
           <li>
-            <a role="button" (click)="authService.logout()" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-sm">Logout</a>
+            <a role="button" (click)="authService.logout()" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-sm"> {{'navbar.logout' | translate}} </a>
           </li>
         }
+        <select (change)="changeLang($any($event.target).value)" class="border bg-gray-100 border-green-600 text-gray-400 text-sm rounded-lg focus:ring-green-600 focus:border-green-600 block !py-1 !px-2 !bg-none">
+          <option [selected]="selectOption()" value="en">en</option>
+          <option [selected]="!selectOption()" value="ar">ar</option>
+        </select>
       </ul>
     </div>
   </div>
