--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,22 +1,16 @@
 @if (product) {
-  <section>
+  <section class="pt-12">
     <div class="grid md:grid-cols-[70%_minmax(0,1fr)] gap-5">
-      <div class="col flex gap-5 h-[550px] overflow-hidden">
-        <div class="flex flex-col w-[25%] gap-2">
-          @for (image of product.images; track $index) {
-            <img [src]="image" class="w-full" alt="product-image" [class]="{
-              'h-1/2': product.images.length === 2,
-              'h-1/3': product.images.length === 3,
-              'h-[24%]': product.images.length === 4,
-              'h-[19%]': product.images.length === 5
-              }" />
-          }
-        </div>
-        <div class="flex-1 w-[70%]">
-          <img [src]="product.imageCover" class="w-full h-full" alt="product-image" />
-        </div>
+      <div class="col h-[400px] overflow-hidden">
+          <owl-carousel-o [options]="customOptions">
+            @for (image of product.images; track $index) {
+              <ng-template carouselSlide>
+                <img [src]="image" alt="product-image" class="w-full" />
+              </ng-template>
+            }
+          </owl-carousel-o>
       </div>
-      <div class="col h-[550px] overflow-hidden">
+      <div class="col h-[350px] p-5">
         <h2 class="text-xl text-green-600 mb-3"> {{product.title}} </h2>
         <h3 class="my-2"> {{product.category.name}} </h3>
         <ul class="flex space-x-2 my-3">
@@ -30,7 +24,7 @@
             <span class="text-gray-500">({{product.ratingsAverage}})</span> | <span class="text-green-600">in stock</span>
           </li>
         </ul>
-        <span class="block my-3"> {{product.price}} EGP </span>
+        <span class="block text-green-600 my-3"> {{product.price}} EGP </span>
         <p class="text-gray-500 my-2"> {{product.description}} </p>
         <div class="border-t border-black mt-5 pt-5">
           <div class="flex gap-2">
@@ -38,26 +32,6 @@
             <button class="size-[40px] rounded-full text-green-600 border border-[#ccc]">
               <i class="fa-regular fa-heart"></i>
             </button>
-          </div>
-        </div>
-        <div class="border border-black mt-5 rounded-lg">
-          <div class="p-2 flex items-center gap-5">
-            <span>
-              <i class="fa-solid fa-truck"></i>
-            </span>
-            <div>
-              <h4>free delivery</h4>
-              <a class="underline text-gray-600 text-sm">Enter your postal code for delivey Avaliabilty</a>
-            </div>
-          </div>
-          <div class="p-2 flex items-center gap-5 border-t border-black">
-            <span>
-              <i class="fa-solid fa-truck"></i>
-            </span>
-            <div>
-              <h4>Delivery Returns</h4>
-              <p>Delivery Returns. <a class="underline text-gray-600 text-sm">Details</a></p>
-            </div>
           </div>
         </div>
       </div>
