--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,7 +17,7 @@
 </section>
 
 <section class="popular-categories py-10 overflow-hidden">
-  <h2 class="text-green-600 mb-4 font-bold text-3xl">Popular Categories</h2>
+  <h2 class="text-green-600 mb-4 font-bold text-3xl">{{"categories.title" | translate }}</h2>
   <owl-carousel-o [options]="customCategoriesOptions">
     @for (category of categories; track category._id) {
       <ng-template carouselSlide>
@@ -28,8 +28,8 @@
 </section>
 
 <section class="popular-products">
-  <h2 class="text-green-600 mb-4 font-bold text-3xl">Popular Products</h2>
-  <div class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 gap-5">
+  <h2 class="text-green-600 mb-4 font-bold text-3xl">{{"products.title" | translate }}</h2>
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 gap-5">
     @for (product of products; track product.id) {
       <app-product-item [product]="product" ></app-product-item>
     }
