--- a/src/app/pages/forget-password/forget-password.component.html
+++ b/src/app/pages/forget-password/forget-password.component.html
@@ -5,7 +5,7 @@
       <div class="relative z-0 w-full mb-5 group">
           <input type="email" name="verifyEmail" id="verifyEmail" formControlName="email" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer" placeholder=" " />
           <label for="verifyEmail" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">{{"forgetPasswordPage.email" | translate }}</label>
-          <app-error-message [inputTitle]="'email is required'" [inputControl]="verifyEmail"></app-error-message>
+          <app-error-message [inputTitle]="'errors.emailMsg' | translate" [inputControl]="verifyEmail"></app-error-message>
       </div>
       <button type="submit" class="text-white bg-green-500 hover:bg-green-600 focus:ring-0 focus:outline-none font-medium rounded-lg text-sm w-full px-5 py-2.5 text-center">
         {{"forgetPasswordPage.verifyEmail" | translate }}
@@ -16,7 +16,7 @@
       <div class="relative z-0 w-full mb-5 group">
           <input type="text" name="resetCode" id="resetCode" formControlName="resetCode" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer" placeholder=" " />
           <label for="resetCode" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">{{"forgetPasswordPage.code" | translate }}</label>
-          <app-error-message [inputTitle]="'Code is required'" [inputMessage]="'Code must contain 6 numbers'" [inputControl]="resetCode"></app-error-message>
+          <app-error-message [inputTitle]="'errors.codeMsg' | translate" [inputMessage]="'errors.codeError' | translate" [inputControl]="resetCode"></app-error-message>
       </div>
       <button type="submit" class="text-white bg-green-500 hover:bg-green-600 focus:ring-0 focus:outline-none font-medium rounded-lg text-sm w-full px-5 py-2.5 text-center">
         {{"forgetPasswordPage.verifyCode" | translate }}
@@ -38,7 +38,7 @@
             <i class="fa fa-eye-slash text-sm"></i>
           }
         </span>
-        <app-error-message [inputTitle]="'password is required'" [inputControl]="newPassword" [inputMessage]="'password must start with upperCase then any 6 chars or more'" ></app-error-message>
+        <app-error-message [inputTitle]="'errors.passwordMsg' | translate" [inputControl]="newPassword" [inputMessage]="'errors.passwordError' | translate" ></app-error-message>
       </div>
       <button type="submit" class="text-white bg-green-500 hover:bg-green-600 focus:ring-0 focus:outline-none font-medium rounded-lg text-sm w-full px-5 py-2.5 text-center">
         {{"forgetPasswordPage.resetPassword" | translate }}
