--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -10,21 +10,21 @@
         <button class="p-2 bg-green-600 text-white rounded-lg">{{'footer.btn' | translate}}</button>
       </div>
     </div>
-    <div class="capitalize flex flex-col md:flex-row gap-2 md:gap-0 justify-between">
-      <div class="flex flex-col md:flex-row gap-2 md:gap-10 items-center">
-        <h3 class="text-[25px] md:text-3xl text-green-600 mb-2 font-semibold">{{'footer.payments' | translate}}</h3>
+    <div class="capitalize flex flex-col lg:flex-row gap-2 lg:gap-0 justify-between">
+      <div class="flex flex-col md:flex-row md:justify-between gap-2 lg:gap-10 items-center">
+        <h3 class="text-[22px] lg:text-3xl text-green-600 mb-2 font-semibold">{{'footer.payments' | translate}}</h3>
         <div class="flex  space-x-4">
-          <img src="/images/amazon-pay.png" class="size-10" alt="image-payment" />
-          <img src="/images/mastercard.webp" class="size-10" alt="image-payment" />
-          <img src="/images/American-Express-Color.png" class="size-10" alt="image-payment" />
-          <img src="/images/paypal.png" class="size-10" alt="image-payment" />
+          <img loading="lazy" src="/images/amazon-pay.png" class="size-10" alt="image-payment" />
+          <img loading="lazy" src="/images/mastercard.webp" class="size-10" alt="image-payment" />
+          <img loading="lazy" src="/images/American-Express-Color.png" class="size-10" alt="image-payment" />
+          <img loading="lazy" src="/images/paypal.png" class="size-10" alt="image-payment" />
         </div>
       </div>
-      <div class="flex flex-col md:flex-row gap-2 md:gap-10 items-center">
-        <h3 class="text-[25px] md:text-3xl text-green-600 mb-2 font-semibold">{{'footer.delivers' | translate}}</h3>
+      <div class="flex flex-col md:flex-row md:justify-between gap-2 lg:gap-10 items-center">
+        <h3 class="text-[22px] lg:text-3xl text-green-600 mb-2 font-semibold">{{'footer.delivers' | translate}}</h3>
         <div class="flex space-x-4">
-          <img src="/images/get-google-play.png" class="size-20" alt="google-play" />
-          <img src="/images/get-apple-store.png" class="!m-0 size-[75px]" alt="apple-store" />
+          <img loading="lazy" src="/images/get-google-play.png" class="size-20" alt="google-play" />
+          <img loading="lazy" src="/images/get-apple-store.png" class="!m-0 size-[75px]" alt="apple-store" />
         </div>
       </div>
     </div>
