--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="bg-gray-100 fixed top-0 left-0 w-full z-[9999] dark:bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a routerLink="/home" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="/images/freshcart-logo.svg" class="w-full h-10" alt="Logo" />
+      <img loading="lazy" src="/images/freshcart-logo.svg" class="w-full h-10" alt="Logo" />
     </a>
     <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
@@ -49,23 +49,23 @@
         </li>
         @if (!isLogin) {
           <li>
-            <a routerLink="/register" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg">{{'navbar.register' | translate}}</a>
+            <a routerLink="/auth/register" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg">{{'navbar.register' | translate}}</a>
           </li>
           <li>
-            <a routerLink="/login" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg">{{'navbar.login' | translate}}</a>
+            <a routerLink="/auth/login" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg">{{'navbar.login' | translate}}</a>
           </li>
         } @else {
           <li class="relative">
             <a routerLink="/cart" routerLinkActive="cart" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg">
               <i class="fa-solid fa-cart-shopping"></i>
             </a>
-            <span class="absolute top-[-5px] right-[-1px] size-4 text-red-600">0</span>
+            <span class="absolute top-[-5px] right-[-1px] size-4 text-red-600"> {{cartCounter()}} </span>
           </li>
           <li class="relative">
             <a routerLink="/wishlist" routerLinkActive="cart" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg">
               <i class="fa-solid fa-heart text-xl"></i>
             </a>
-            <span class="absolute top-[-5px] right-[-1px] size-4 text-red-600">0</span>
+            <span class="absolute top-[-5px] right-[-1px] size-4 text-red-600"> {{wishlistCounter()}} </span>
           </li>
           <li>
             <a role="button" (click)="authService.logout()" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-sm"> {{'navbar.logout' | translate}} </a>
