--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,14 +4,14 @@
       <owl-carousel-o [options]="customMainOptions">
         @for (image of imagesUrl; track $index) {
           <ng-template carouselSlide>
-            <img [src]="image" class="w-full h-[400px]" alt="slider-image" />
+            <img [src]="image" loading="lazy" class="w-full h-[400px]" alt="slider-image" />
           </ng-template>
         }
       </owl-carousel-o>
     </div>
     <div class="grid grid-cols-2 md:block">
-      <img src="/images/grocery-banner.png" class="w-full h-[200px]" alt="grocery-banner" />
-      <img src="/images/grocery-banner-2.jpeg" class="w-full h-[200px]" alt="grocery-banner" />
+      <img loading="lazy" src="/images/grocery-banner.png" class="w-full h-[200px]" alt="grocery-banner" />
+      <img loading="lazy" src="/images/grocery-banner-2.jpeg" class="w-full h-[200px]" alt="grocery-banner" />
     </div>
   </div>
 </section>
