create all orders, improve footer responsive, improve product details design, slove strip redirect

--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -19,6 +19,9 @@
             <a routerLink="/products" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg"> {{'navbar.products' | translate}} </a>
           </li>
           <li>
+            <a routerLink="/allorders" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg"> {{'navbar.allorders' | translate}} </a>
+          </li>
+          <li>
             <a routerLink="/categories" routerLinkActive="active" class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-lg"> {{'navbar.categories' | translate}} </a>
           </li>
           <li>
@@ -28,22 +31,22 @@
       }
       <ul class="font-medium ms-auto flex flex-row md:p-0 border rounded-lg md:flex-row md:space-x-2 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
         <li>
-          <a class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-sm">
-            <i class="fa-brands fa-instagram"></i>
+          <a target="_blank" href="https://github.com/ahmedya3ser8" class="block py-2 px-1 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-sm">
+            <i class="fa-brands fa-github"></i>
           </a>
         </li>
         <li>
-          <a class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-sm">
+          <a target="_blank" href="https://www.facebook.com/ahmedya3ser8" class="block py-2 px-1 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-sm">
             <i class="fa-brands fa-facebook-f"></i>
           </a>
         </li>
         <li>
-          <a class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-sm">
+          <a target="_blank" href="https://x.com/ahmed_ya3ser_8" class="block py-2 px-1 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-sm">
             <i class="fa-brands fa-twitter"></i>
           </a>
         </li>
         <li>
-          <a class="block py-2 px-3 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-sm">
+          <a target="_blank" href="https://www.linkedin.com/in/ahmed-yasser-21382a267/" class="block py-2 px-1 text-gray-400 transition-all duration-700 hover:text-gray-700 cursor-pointer rounded-sm">
             <i class="fa-brands fa-linkedin"></i>
           </a>
         </li>
