--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -5,26 +5,26 @@
         <h3 class="text-3xl text-green-600 mb-2 font-semibold"> {{'footer.title' | translate}} </h3>
         <p class="mb-4 text-gray-500">{{'footer.desc' | translate}}</p>
       </div>
-      <div class="flex justify-between gap-5">
+      <div class="flex flex-col md:flex-row justify-between gap-5">
         <input type="email" class="flex-grow text-gray-500 outline-none border-none focus:border-none rounded-lg" placeholder="example123@gmail.com" name="">
         <button class="p-2 bg-green-600 text-white rounded-lg">{{'footer.btn' | translate}}</button>
       </div>
     </div>
-    <div class="capitalize flex flex-col lg:flex-row gap-2 lg:gap-0 justify-between">
-      <div class="flex flex-col md:flex-row md:justify-between gap-2 lg:gap-10 items-center">
-        <h3 class="text-[22px] lg:text-3xl text-green-600 mb-2 font-semibold">{{'footer.payments' | translate}}</h3>
+    <div class="capitalize flex flex-col sm:flex-row gap-2 sm:gap-0 justify-between">
+      <div class="flex flex-col md:flex-row md:justify-between gap-2 lg:gap-10 md:items-center">
+        <h3 class="text-[18px] lg:text-3xl text-green-600 mb-2 font-semibold">{{'footer.payments' | translate}}</h3>
         <div class="flex  space-x-4">
-          <img loading="lazy" src="/images/amazon-pay.png" class="size-10" alt="image-payment" />
-          <img loading="lazy" src="/images/mastercard.webp" class="size-10" alt="image-payment" />
-          <img loading="lazy" src="/images/American-Express-Color.png" class="size-10" alt="image-payment" />
-          <img loading="lazy" src="/images/paypal.png" class="size-10" alt="image-payment" />
+          <img loading="lazy" src="/images/amazon-pay.png" class="size-5 sm:size-10" alt="image-payment" />
+          <img loading="lazy" src="/images/mastercard.webp" class="size-5 sm:size-10" alt="image-payment" />
+          <img loading="lazy" src="/images/American-Express-Color.png" class="size-5 sm:size-10" alt="image-payment" />
+          <img loading="lazy" src="/images/paypal.png" class="size-5 sm:size-10" alt="image-payment" />
         </div>
       </div>
-      <div class="flex flex-col md:flex-row md:justify-between gap-2 lg:gap-10 items-center">
-        <h3 class="text-[22px] lg:text-3xl text-green-600 mb-2 font-semibold">{{'footer.delivers' | translate}}</h3>
+      <div class="flex flex-col md:flex-row md:justify-between gap-2 lg:gap-10 md:items-center">
+        <h3 class="text-[18px] lg:text-3xl text-green-600 mb-2 font-semibold">{{'footer.delivers' | translate}}</h3>
         <div class="flex space-x-4">
-          <img loading="lazy" src="/images/get-google-play.png" class="size-20" alt="google-play" />
-          <img loading="lazy" src="/images/get-apple-store.png" class="!m-0 size-[75px]" alt="apple-store" />
+          <img loading="lazy" src="/images/get-google-play.png" class="size-16 md:size-20" alt="google-play" />
+          <img loading="lazy" src="/images/get-apple-store.png" class="!m-0 size-16 md:size-[75px]" alt="apple-store" />
         </div>
       </div>
     </div>
