create pagination for products, create not-found page, close all subscription, create readme file for ecommerce, improve some designs

--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -28,5 +28,8 @@
         </div>
       </div>
     </div>
+    <div class="copyright text-center">
+      <p>{{'footer.copyright' | translate }} <span class="text-green-600 font-semibold">{{'footer.author' | translate }}</span></p>
+    </div>
   </div>
 </footer>
