--- a/src/app/shared/components/ui/product-item/product-item.component.html
+++ b/src/app/shared/components/ui/product-item/product-item.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="body mt-2">
     <h3 class="text-green-500 font-medium"> {{product().category.name}} </h3>
-    <h4> {{product().title.split(' ', 2).join(' ')}} </h4>
+    <h4 class="text-[13px]"> {{product().title.split(' ', 2).join(' ')}} </h4>
     <div class="mt-2 flex justify-between items-center">
       <span> {{product().price}} {{"products.price" | translate }} </span>
       <span>
