--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,10 @@
 .toast-progress {
   background-color: #fff;
 }
+
+.ngx-pagination .current {
+  background: #0e9f6e !important;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 6px;
+}
