--- a/src/app/pages/all-orders/all-orders.component.html
+++ b/src/app/pages/all-orders/all-orders.component.html
@@ -11,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-      @for (product of products; track product.id) {
+      @for (product of products(); track product.id) {
         @for (item of product.cartItems; track $index) {
           <tr class="bg-white border-b hover:bg-gray-100 transition-all duration-300">
             <td class="p-4">
