--- a/src/app/pages/forget-password/forget-password.component.html
+++ b/src/app/pages/forget-password/forget-password.component.html
@@ -1,6 +1,6 @@
 <section class="w-full md:w-2/3 mx-auto">
   <h2 class="text-center text-green-600 text-3xl mb-5 font-semibold"> {{"forgetPasswordPage.forgetPassword" | translate }} </h2>
-  @if (step === 1) {
+  @if (step() === 1) {
     <form class="max-w-xl mx-auto p-5 border border-green-600 rounded-lg" [formGroup]="verifyEmailForm" (ngSubmit)="submitVerifyEmail()" >
       <div class="relative z-0 w-full mb-5 group">
           <input type="email" name="verifyEmail" id="verifyEmail" formControlName="email" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer" placeholder=" " />
@@ -11,7 +11,7 @@
         {{"forgetPasswordPage.verifyEmail" | translate }}
       </button>
     </form>
-  } @else if (step === 2) {
+  } @else if (step() === 2) {
     <form class="max-w-xl mx-auto p-5 border border-green-600 rounded-lg" [formGroup]="verifyCodeForm" (ngSubmit)="submitVerifyCode()" >
       <div class="relative z-0 w-full mb-5 group">
           <input type="text" name="resetCode" id="resetCode" formControlName="resetCode" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer" placeholder=" " />
@@ -22,17 +22,17 @@
         {{"forgetPasswordPage.verifyCode" | translate }}
       </button>
     </form>
-  } @else if (step === 3) {
+  } @else if (step() === 3) {
     <form class="max-w-xl mx-auto p-5 border border-green-600 rounded-lg" [formGroup]="resetPasswordForm" (ngSubmit)="submitResetPassword()" >
       <div class="relative z-0 w-full mb-5 group">
           <input type="email" readonly name="email" id="email" formControlName="email" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer" placeholder=" " />
           <label for="email" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 rtl:peer-focus:left-auto peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">{{"forgetPasswordPage.email" | translate }}</label>
       </div>
       <div class="relative z-0 w-full mb-5 group">
-        <input [type]="!toggleInput ? 'password' : 'text'" name="newPassword" id="newPassword" formControlName="newPassword" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer" placeholder=" " />
+        <input [type]="!toggleInput() ? 'password' : 'text'" name="newPassword" id="newPassword" formControlName="newPassword" class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-green-600 focus:outline-none focus:ring-0 focus:border-green-600 peer" placeholder=" " />
         <label for="newPassword" class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-green-600 peer-focus:dark:text-green-600 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">{{"forgetPasswordPage.newPassword" | translate }}</label>
         <span (click)="toggle()" class="absolute top-[20%] cursor-pointer" [class]="selectedLang() ? 'right-0' : 'left-0' ">
-          @if (!toggleInput) {
+          @if (!toggleInput()) {
             <i class="fa fa-eye text-sm"></i>
           } @else {
             <i class="fa fa-eye-slash text-sm"></i>
@@ -45,7 +45,7 @@
       </button>
     </form>
   }
-  @if (errorMsg) {
-    <div class="text-center text-red-500 my-2 text-lg p-2"> {{errorMsg}} </div>
+  @if (errorMsg()) {
+    <div class="text-center text-red-500 my-2 text-lg p-2"> {{errorMsg()}} </div>
   }
 </section>
