--- a/src/app/pages/wishlist/wishlist.component.html
+++ b/src/app/pages/wishlist/wishlist.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="grid grid-cols-1 gap-3 md:mt-5">
-    @for (product of products; track product.id ) {
+    @for (product of products(); track product.id ) {
       <div class="product bg-[#f6f6f6] flex flex-col md:flex-row items-center md:gap-5 rounded-lg border border-[#ccc] overflow-hidden">
         <div class="image w-full md:w-[10%]">
           <img loading="lazy" [src]="product.imageCover" class="w-full h-[200px] md:h-[100px]" alt="product image" />
